# atom

./: README.md  pyproject.toml
src/atom/: main.py
src/atom/agents/: __init__.py  task_agent.py
src/atom/entity/: __init__.py  repository.py  task.py
src/atom/tools/: __init__.py  build_in_tools.py
src/atom/utils/: __init__.py  git.py
