[project]
name = "atom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "langchain[ollama]>=0.3.27",
    "langgraph>=0.6.4",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "typer>=0.16.0",
]

[project.scripts]
atom = "atom.main:app"

[tool.setuptools.packages.find]
where = ["src"] # 如果你的源码在 src 目录下
